# naivecoin

./: .gitlab-ci.yml
source/: CMakeLists.txt
source/client/: CMakeLists.txt
source/client/src/: commandlinehandler.cpp  commandlinehandler.h  generate_keypair_command.cpp  generate_keypair_command.h  main.cpp  options.cpp  options.h  query_balance_command.cpp  query_balance_command.h  query_transactions_command.cpp  query_transactions_command.h  submit_transaction_command.cpp  submit_transaction_command.h  utils.cpp  utils.h
source/core/: CMakeLists.txt
source/core/include/naivecoin/core/: block.h  serialize.h  utils.h
source/core/src/: block.cpp  serialize.cpp  utils.cpp
source/core/test/: block.cpp  main.cpp  serialize.cpp  utils.cpp
source/crypto/: CMakeLists.txt
source/crypto/include/naivecoin/crypto/: crypto.h
source/crypto/src/: crypto.cpp
source/crypto/test/: crypto.cpp  main.cpp
source/http/: CMakeLists.txt
source/http/include/naivecoin/http/: http.h
source/http/src/: http.cpp
source/http/test/: http.cpp  main.cpp
source/miner/: CMakeLists.txt
source/miner/src/: controlconnection.cpp  controlconnection.h  controlserver.cpp  controlserver.h  dataconnection.cpp  dataconnection.h  dataserver.cpp  dataserver.h  main.cpp  miner.cpp  miner.h  options.cpp  options.h
source/node/: CMakeLists.txt
source/node/src/: controlconnection.h  controlserver.h  dataconnection.cpp  dataconnection.h  dataserver.cpp  dataserver.h  main.cpp  miner.cpp  miner.h  node.cpp  node.h  options.cpp  options.h  peersmanager.cpp  peersmanager.h  sender.cpp  sender.h
source/serialization/: CMakeLists.txt
source/serialization/include/naivecoin/serialization/: block.h  message.h  time.h  transaction.h  unspent_output.h
source/serialization/src/: block.cpp  common.cpp  common.h  message.cpp  time.cpp  transaction.cpp  unspent_output.cpp
source/serialization/test/: block.cpp  main.cpp  message.cpp  transaction.cpp  unspent_output.cpp
source/time/: CMakeLists.txt
source/time/include/naivecoin/time/: time.h
source/time/src/: time.cpp
source/time/test/: main.cpp  time.cpp
source/transaction/: CMakeLists.txt
source/transaction/include/naivecoin/transaction/: input.h  output.h  serialize.h  transaction.h  unspent_output.h  utils.h
source/transaction/src/: input.cpp  output.cpp  serialize.cpp  transaction.cpp  unspent_output.cpp  utils.cpp
source/transaction/test/: input.cpp  main.cpp  output.cpp  serialize.cpp  transaction.cpp  unspent_output.cpp  utils.cpp
